fixed ui on mobile

--- a/client/src/components/Profile.module.css
+++ b/client/src/components/Profile.module.css
@@ -1,5 +1,4 @@
 .div{
-    width: 175px;
     height: 100vh;
     background-color: #abb9cd;
     display: flex;
@@ -9,6 +8,12 @@
     overflow: hidden;
     border-right: 1px solid #e2e8f0;
     flex-shrink: 0;
+}
+
+@media(min-width: 768px){
+  .div{
+    width: 175px;
+  }
 }
 
 .avatar {
